# coriolis-pdk-ihpsg13g2-c4m

./: .gitignore  build-LIP6.sh  build-devs.sh  meson.build  pyproject.toml
libs.ref/StdCellLib/spice/: and21nor_x0.spi  and21nor_x1.spi  and2_x1.spi  and3_x1.spi  and4_x1.spi  buf_x1.spi  buf_x2.spi  buf_x4.spi  decap_w0.spi  dff_x1.spi  dffnr_x1.spi  inv_x0.spi  inv_x1.spi  inv_x2.spi  inv_x4.spi  mux2_x1.spi  nand1_x1.spi  nand2_x0.spi  nand2_x1.spi  nand2_x3.spi  nand4_x0.spi  nand4_x1.spi  nexor2_x0.spi  nor2_x0.spi  nor2_x1.spi  nor3_x0.spi  nor3_x1.spi  nor4_x0.spi  nor4_x1.spi  nsnrlatch_x0.spi  nsnrlatch_x1.spi  one_x1.spi  or21nand_x0.spi  or21nand_x1.spi  or2_x1.spi  or3_x1.spi  or4_x1.spi  xor2_x0.spi  zero_x1.spi  zeroone_x1.spi
libs.tech/: meson.build
libs.tech/coriolis/: meson.build
libs.tech/coriolis/ihpsg13g2/: StdCell3V3Lib.py  StdCell3V3Lib_fix.py  StdCellLib.py  StdCellLib_fix.py  __init__.py  arrakeen.py  iolib.py  sramlib.py  techno.py
libs.tech/coriolis/ihpsg13g2/core2chip/: sg13g2io.py
libs.tech/coriolis/ihpsg13g2/designflow/: drc.py  filler.py  sealring.py
packaging/: c4m-ihpsg13g2-pdk.spec  coriolis-pdk-ihpsg13g2-c4m.dsc  coriolis-pdk-ihpsg13g2-c4m.spec  coriolis-pdk-ihpsg13g2-pdk-rpmlintrc  debian.changelog  debian.control  debian.copyright  debian.rules  mkArchives.sh  uploadOBS.sh
