
coriolis = files( [ 'coriolis/ihpsg13g2/StdCell3V3Lib.py'
                  , 'coriolis/ihpsg13g2/StdCell3V3Lib_fix.py'
                  , 'coriolis/ihpsg13g2/StdCellLib.py'
                  , 'coriolis/ihpsg13g2/StdCellLib_fix.py'
                  , 'coriolis/ihpsg13g2/__init__.py'
                  , 'coriolis/ihpsg13g2/techno.py'
                  , 'coriolis/__init__.py'
                  ] )
py.install_sources( coriolis, subdir:'coriolis/pdks' )
